unpackaged/main/default/objects/ARR_Call_Receive_LWC_UI_Configuration__c/ARR_Call_Receive_LWC_UI_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ARR Call Receive LWC UI Configuration</label>
</CustomObject>