unpackaged/main/default/objects/ARR_Call_Receive_LWC_UI_Configuration__c/fields/API_Callout_Map_Search__c.field-meta.xml
<CustomField>
    <fullName>API_Callout_Map_Search__c</fullName>
    <description>API Used for Callout Map Search</description>
    <label>API Callout Map Search</label>
    <length>50</length>
    <type>Text</type>
</CustomField>