unpackaged/main/default/objects/ARR_Call_Receive_LWC_UI_Configuration__c/fields/Approved_Garage_Search_Result_Limit__c.field-meta.xml
<CustomField>
    <fullName>Approved_Garage_Search_Result_Limit__c</fullName>
    <label>Approved Garage Search Result Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>