unpackaged/main/default/objects/ARR_Call_Receive_LWC_UI_Configuration__c/fields/Map_Search_Display_limit__c.field-meta.xml
<CustomField>
    <fullName>Map_Search_Display_limit__c</fullName>
    <description>Number of records to display</description>
    <label>Map Search Display limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>