unpackaged/main/default/objects/ARR_Call_Receive_LWC_UI_Configuration__c/fields/Map_UI_Zoom_Level__c.field-meta.xml
<CustomField>
    <fullName>Map_UI_Zoom_Level__c</fullName>
    <label>Map UI Zoom Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>